Fix weird flexbox overflow on contact.html
Restructured contact.html and removed IDs borrowed from index.html,
essentially rebuilding the contact page from scratch in order to fix the
flexbox overflow. For the emojis on the bottom, I made it so that they
appear above and below the text on portrait mode, and on either side on
landscape mode.

--- a/style.scss
+++ b/style.scss
@@ -139,6 +139,8 @@ main.stick_on_scroll_with_page_title {
 
 main.contact {
     background-color: goldenrod;
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
@@ -183,9 +185,18 @@ p {
     font-size: clamp(0.9rem, 3vw, 1.5rem);
     line-height: 1.5;
     text-align: center;
+    padding: 0 2rem;
 
     &.contact {
         color: $mint_green;
+    }
+
+    .emojis {
+        padding: 0 30vw;
+
+        @media screen and (orientation: landscape) {
+            padding: 0;
+        }
     }
 
     /* &#contact_bottom_text {
@@ -197,7 +208,8 @@ p {
 
 ul {
     list-style-type: disc;
-    padding: 5rem;
+    padding: 0 5rem;
+    
 
     &.sub_list {
         list-style-type: square;
@@ -443,15 +455,6 @@ a:active {
         margin-right: auto;
         max-width: 70vw;
     }
-}
-
-//New attempt to fix text overflow
-#contact_text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-grow: 1;
-    min-height: 0;
 }
 
 // ** SVG Image Container ** //
@@ -725,6 +728,25 @@ a:active {
         border: 1px solid red;
     }
 } */
+
+section.contact {
+    min-height: 70vh;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    border: 1px solid blue;
+    background-image: url('./SVGs/gold_wave3.svg');
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @media screen and (orientation: landscape) {
+        background-position: bottom;
+        aspect-ratio: 9/6;
+        height: 100vh;
+    }
+}
 
 .footer {
     bottom: 0;
